--- a/package.json
+++ b/package.json
@@ -11,16 +11,23 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.8.0",
     "@prisma/client": "^6.6.0",
+    "@radix-ui/react-slot": "^1.2.0",
     "better-react-mathjax": "^2.3.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "csv-parse": "^5.6.0",
     "csv-parser": "^3.2.0",
     "csv-writer": "^1.6.0",
+    "date-fns": "^4.1.0",
     "html-react-parser": "^5.2.3",
     "katex": "^0.16.22",
+    "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.2.0",
+    "tw-animate-css": "^1.2.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
