--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "csv-parser": "^3.2.0",
     "csv-writer": "^1.6.0",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "html-react-parser": "^5.2.3",
     "katex": "^0.16.22",
     "lucide-react": "^0.503.0",
