--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "csv-writer": "^1.6.0",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "gsap": "^3.12.7",
     "html-react-parser": "^5.2.3",
     "katex": "^0.16.22",
     "lucide-react": "^0.503.0",
